# claude-apply-skill

./: .gitignore  DISTRIBUTION.md  README.md  SESSION-SUMMARY.md  SKILL.md  apply.sh  install.sh  prompt.txt  run.sh  skill.json  website-snippet.html
vui/: .env.example  Cargo.toml  prompt.txt
vui/src/: api.rs  audio.rs  form.rs  main.rs  theme.rs
vui/src/api/: claude.rs  elevenlabs.rs
vui/src/audio/: capture.rs  playback.rs
