[package]
name = "vui"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.1"
dotenvy = "0.15.7"
iced = { git = "https://github.com/iced-rs/iced", version = "0.15.0-dev", features = ["canvas", "tokio"] }
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
rodio = "0.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.49.0", features = ["full"] }
